unpackaged/main/default/objects/ProjectMember__c/ProjectMember__c.object-meta.xml
<CustomObject>
    <label>Контрагент</label>
    <nameField>
        <displayFormat>ProjectMember-{0}</displayFormat>
        <label>Код контрагента</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Контрагенты</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>