unpackaged/main/default/objects/ProjectMember__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Организация</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Проекты (участник)</relationshipLabel>
    <relationshipName>Project_membersWMZ8</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>