unpackaged/main/default/objects/ProjectMember__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <label>Проект</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Контрагенты</relationshipLabel>
    <relationshipName>Project_memberHUKx</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>