unpackaged/main/default/objects/ProjectMember__c/fields/ProjectRoles__c.field-meta.xml
<CustomField>
    <fullName>ProjectRoles__c</fullName>
    <label>Роли в проекте</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Генпроектировщик</fullName>
            </value>
            <value>
                <fullName>Субпроектировщик</fullName>
            </value>
            <value>
                <fullName>Генподрядчик</fullName>
            </value>
            <value>
                <fullName>Субподрядчик</fullName>
            </value>
            <value>
                <fullName>Эксплуатация</fullName>
            </value>
            <value>
                <fullName>Заказчик</fullName>
            </value>
            <value>
                <fullName>Дилер</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>