unpackaged/main/default/objects/ProjectMember__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>Все</label>
</ListView>